      (Vikentsi Lapa)
  e - check if a process still exists before killing it and sleeping. This speeds up
      the time for killing a task exponentially, although this will show mostly for
      SMP/NUMA systems, but it will help everywhere.
      (Dr. Bernd Kallies)
  b - Fix for reque failures on mom.  Forked pbs_mom would silently segfault and
      job was left in Exiting state.

2.5.3
  b - stop reporting errors on success when modifying array ranges
  b - don't try to set the user id multiple times
  b - added some retrying to get connection and changed some log messages when
      doing a pbs_alterjob after a checkpoint
  c - fix segfault in tracejob. It wasn't malloc'ing space for the null 
      terminator
  e - add the variables PBS_NUM_NODES and PBS_NUM_PPN to the job environment
      (TRQ-6)
  e - be able to append to the job's variable_list through the API 
      (TRQ-5)
  e - Added support for munge authentication. This is an alternative for the 
      default ruserok remote authentication and pbs_iff. This is a compile
      time option. The configure option to use is --enable-munge-auth.
      Ken Nielson (TRQ-7) September 15, 2010.
  b - fix the dependency hold for arrays. They were accidentally cleared 
      before (RT 8593)
  e - add a logging statement if sendto fails at any points in rpp_send_out
  b - Applied patch submitted by Will Nolan to fix bug 76. 
      "blocking read does not time out using signal handler"
  b - fix a bug in the $spool_as_final_name code if HAVE_WORDEXP is 
      undefined
  b - Bugzilla bug 84. Security bug on the way checkpoint is being handled.
      (Robin R. - Miami Univ. of Ohio)
  e - Now saving serverdb as an xml file instead of a byte-dump, thus 
      allowing canned installations without qmgr scripts, as well as more
      portability. Able to upgrade automatically from 2.1, 2.3, and 2.4
  b - make the tcp reading buffer able to grow dynamically to read larger 